# flex-joints

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  flake.nix  package.xml
.github/workflows/: nix.yml  update-flake-lock.yml
include/flex-joints/: flexi-hips.hpp  fwd.hpp
python/: CMakeLists.txt  main.cpp
python/flex_joints/: __init__.py  main.cpp
python/flex_joints/stiff_identify/: FirstPasses.py  README  first_passes.py  identification_tools.py  map_stiffness.py  unbagger.py
src/: flexi-hips.cpp
stiff_identify/: Identification_tools.py  README  map_stiffness.py
tests/: CMakeLists.txt  test-flex-estimator.cpp  test_flex_estimator.cpp
tests/python/: test_flexi_hips.py
