<?xml version="1.0"?>
<package format="3">
  <name>flex-joints</name>
  <version>1.0.0</version>
  <description>adaptation for rigid control on flexible devices</description>
  <author email="nahuel.villa@laas.fr">Nahuel Villa</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/gepetto/flex-joints</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>eigenpy</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
